# python-safeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/safeline/: __init__.py
